--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -9,4 +9,4 @@ panelTitle=Add Todo
 openDialogButtonText=Add Todo
 dialogCloseButtonText=Close
 successMessage=Create todo successfully!
-invoiceListTitle=Todo List
+todoListTitle=Todo List
