add buttons event

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -10,3 +10,8 @@ openDialogButtonText=Add Todo
 dialogCloseButtonText=Close
 successMessage=Create todo successfully!
 todoListTitle=Todo List
+
+successDialogTitle=Success!
+comfirmDialogTitle=Confirm!
+comfirmMessage=Are you sure you want to delete all completed todo item?
+dialogConfirmButtonText=Yes
